fixed logo alignment & padding on small screens.

--- a/kondo_coin/app/assets/stylesheets/custom.css.scss
+++ b/kondo_coin/app/assets/stylesheets/custom.css.scss
@@ -22,6 +22,14 @@ body {
   padding-left: 60px;
   padding-right: 60px;
 }
+// But: only small padding on small screens!
+@media (max-width: 979px) {
+  body {
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
 
 section {
   overflow: auto;
@@ -55,6 +63,16 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 50px;
   margin-bottom: 30px;
   text-align: center;
+}
+
+.logo-image {
+  margin-bottom: 30px;
+  float: right;
+}
+
+.location {
+  margin-bottom: 30px;
+  clear: right;
 }
 
 h1 {
